# leonard

./: .gitignore  LICENSE  Makefile  README.md
.claude/: settings.local.json
apps/desktop/Leonard/: LeonardApp.swift
apps/desktop/Leonard.xcodeproj/: project.pbxproj
apps/desktop/Leonard/Config/: AppConfig.swift
apps/desktop/Leonard/Models/: AIModel.swift  Message.swift  Skill.swift  Tool.swift
apps/desktop/Leonard/Services/: CoreAPI.swift  CoreBridge.swift
apps/desktop/Leonard/ViewModels/: AIsViewModel.swift  ChatViewModel.swift  MemoryViewModel.swift  ToolsViewModel.swift
apps/desktop/Leonard/Views/: MainView.swift
apps/desktop/Leonard/Views/AIs/: AIsView.swift  ModelsSection.swift  SkillsSection.swift  ToolsSection.swift
apps/desktop/Leonard/Views/AskLeonard/: AskLeonardView.swift  ChatInput.swift  MessageBubble.swift  MessageList.swift
apps/desktop/Leonard/Views/ExternalTool/: ExternalToolView.swift
apps/desktop/Leonard/Views/Memory/: MemoryView.swift
apps/desktop/Leonard/Views/Sidebar/: SidebarView.swift
core/: README.md  pyproject.toml
core/leonard/: __init__.py  config.py  main.py
core/leonard/api/: orchestrator_store.py  schemas.py
core/leonard/api/routes/: chat.py  memory.py  models.py  tools.py
core/leonard/context/: __init__.py  conversation.py  entities.py  resolver.py
core/leonard/engine/: __init__.py  model_manager.py  orchestrator.py  router.py
core/leonard/mcp/: __init__.py  client.py  permissions.py  registry.py
core/leonard/memory/: __init__.py  chunking.py  embeddings.py  indexer.py  manager.py  retriever.py  settings.py  vault.py
core/leonard/memory/parsers/: __init__.py  base.py  code.py  docx.py  pdf.py  spreadsheet.py  text.py
core/leonard/models/: __init__.py  capabilities.py  downloader.py  registry.py
core/leonard/runtime/: __init__.py  process_manager.py
core/leonard/tests/: __init__.py  test_action_guard.py  test_context.py  test_context_integration.py  test_filesystem_tools.py  test_integration.py  test_resolver.py  test_tool_detection.py
core/leonard/tools/: __init__.py  base.py  executor.py  file_ops.py  filesystem.py  organizer.py  shell.py  verifier.py
core/leonard/utils/: action_guard.py  logging.py  response_formatter.py
docs/: api.md  architecture.md
